--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=BioRhyme');
+@import url('https://fonts.googleapis.com/css?family=Maven+Pro');
+
 body {
-  font-family: 'BioRhyme', serif;
+  font-family: 'Maven Pro', sans-serif;
   background-color: white;
   margin: 0;
   height: 100%;
 }
-
+/* ----------------------- OUTLINE */
+* {
+  outline: 1px dotted red;
+}
+/* ----------------------- OUTLINE */
 .header {
-  background-color: #b3b3b3;
+  background-color: #446280;
   height: 90px;
-  border-bottom: 5px solid #8c8c8c;
+  border-bottom: 3px solid #283950;
 }
 
 .nav {
@@ -46,7 +52,7 @@ body {
   padding: 5px 0;
 }
 
-.home {
+.pyramid {
   max-width: 960px;
   text-align: center;
   margin-left: auto;
