--- a/store.css
+++ b/store.css
@@ -8,12 +8,12 @@ body {
   height: 100%;
 }
 /* ----------------------- OUTLINE */
-/* {
+* {
   outline: 1px dotted red;
 }
 /* ----------------------- OUTLINE */
 .header {
-  background-color: #446280;
+  background-color: #ffffff;
   height: 70px;
   border-bottom: 3px solid #283950;
 }
@@ -40,7 +40,7 @@ body {
 }
 
 .links a {
-  color: white;
+  color: #000000;
   text-decoration: none;
   padding: 0 10px;
 }
@@ -57,6 +57,30 @@ body {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+}
+
+.store {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+}
+
+div.gallery {
+    margin: 5px;
+    float: left;
+    border: 3px solid #283950;
+    width: 400px;
+    height: 500px;
+}
+
+div.gallery:hover {
+    border: 3px solid #283950;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
 }
 
 .footer {
