--- a/store.css
+++ b/store.css
@@ -92,3 +92,22 @@ div.gallery img {
   font-size: 1rem;
   color: #ffffff;
 }
+
+
+#galleryContainer {
+  width: 960px;
+  height: 1520px;
+  margin-left: auto;
+  margin-right: auto;
+
+  color: white;
+}
+
+#galleryImages div {
+  width: 465px;
+  height: 500px;
+  float: left;
+  margin-left: 10px;
+  margin-bottom: 10px;
+
+}
