--- a/store.css
+++ b/store.css
@@ -8,7 +8,7 @@ body {
   height: 100%;
 }
 /* ----------------------- OUTLINE */
-/* {
+* {
   outline: 1px dotted red;
 }
 /* ----------------------- OUTLINE */
@@ -26,7 +26,7 @@ body {
 }
 
 .logo {
-  position: fixed;
+  position: absolute;
   float: left;
   margin-top: 15px;
   margin-left: 450px;
@@ -66,7 +66,7 @@ body {
   overflow: hidden;
 }
 
-#galleryContainer {
+.galleryContainer {
   width: 960px;
   height: 1520px;
   margin-left: auto;
@@ -74,7 +74,7 @@ body {
   color: white;
 }
 
-#galleryImages div {
+.galleryImages div {
   width: 400px;
   height: 500px;
   float: left;
