--- a/store.css
+++ b/store.css
@@ -91,3 +91,44 @@ body {
   font-size: 1rem;
   color: #ffffff;
 }
+
+.modalContainer {
+  position: fixed;
+  background-color: #ffff;
+  width: 70%;
+  max-width: 400px;
+  left: 50%;
+  padding: 20px;
+  border-radius: 3px;
+
+  -webkit-transform: translate(-50%, -250%);
+  -ms-transform: translate(-50%, -250%);
+  transform: translate(-50%, -250%);
+
+  -webkit-transition: -webkit-transform 200ms linear;
+  transition: transform 200ms linear;
+}
+
+.modal:before {
+  content: "";
+  position: fixed;
+  display: none;
+  background: rgba(0, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+
+}
+
+.modal:target::before {
+  display: block;
+}
+
+.modal:target .modalContainer {
+  -webkit-transform: translate(-50%, -100%);
+  -ms-transform: translate(-50%, -100%);
+  transform: translate(-50%, -100%);
+}
+
+# modalClose {}
