--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   height: 100%;
 }
 /* ----------------------- OUTLINE */
-/* {
+* {
   outline: 1px dotted red;
 }
 /* ----------------------- OUTLINE */
@@ -288,6 +288,33 @@ margin-right: auto;
   text-align: center;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 982px) {
+  #linksContainer {
+    height: 25px;
+    text-align: center;
+    font-size: 1rem;
+  }
+
+  #links a {
+    color: black;
+    text-decoration: none;
+  }
+
+  #footerContainer {
+    background-color: #4d4b4b;
+    border-top: 2px solid #000000;
+    margin-top: 80px;
+    position: absolute;
+    width: 100%;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+  #footer {
+    height: 20px;
+    font-size: 1rem;
+    color: #ffffff;
+    text-align: center;
+  }
 
 }
