--- a/store.css
+++ b/store.css
@@ -109,7 +109,7 @@ body {
 
 .galleryContainer {
   width: 960px;
-  height: 1520px;
+  height: 2000px;
   margin-left: auto;
   margin-right: auto;
   color: black;
@@ -126,61 +126,19 @@ body {
 }
 
 .footer {
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #b3b3b3;
+  background-color: #4d4b4b;
   height: 50px;
-  border-top: 5px solid #8c8c8c;
+  border-top: 5px solid #000000;
   font-size: 1rem;
   color: #ffffff;
-}
-
-/*
-.modalContainer {
-  position: fixed;
-  background-color: #ffff;
-  width: 70%;
-  max-width: 400px;
-  left: 50%;
-  padding: 20px;
-  border-radius: 3px;
-
-<<<<<<< HEAD
-  -webkit-transform: translate(-300px, -3000px);
-  -ms-transform: translate(-300px, -3000px);
-  transform: translate(-300px, -3000px);
-=======
-  -webkit-transform: translate(-220px, -5000px);
-  -ms-transform: translate(-220px, -5000px);
-  transform: translate(-220px, -5000px);
->>>>>>> origin/master
-
-  -webkit-transition: -webkit-transform 200ms linear;
-  transition: transform 200ms linear;
-}
-
-.modal:before {
-  content: "";
-  position: fixed;
-  display: none;
-  background: rgba(0, 0, 0, 0.8);
-  top: 0;
+  text-align: center;
+  right: 0;
+  bottom: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
 }
 
-.modal:target::before {
-  display: block;
+@media screen and (max-width: 982px){
+  .footer {
+    position: absolute;
+  }
 }
-
-.modal:target .modalContainer {
-  top: 80%;
-
-  -webkit-transform: translate(-70%, -100%);
-  -ms-transform: translate(-70%, -100%);
-  transform: translate(-70%, -100%);
-}
-
-# modalClose {}
-*/
