--- a/store.css
+++ b/store.css
@@ -8,7 +8,7 @@ body {
   height: 100%;
 }
 /* ----------------------- OUTLINE */
-/* {
+* {
   outline: 1px dotted red;
 }
 /* ----------------------- OUTLINE */
@@ -109,7 +109,7 @@ body {
 
 .galleryContainer {
   width: 960px;
-  height: 1520px;
+  height: 2222px;
   margin-left: auto;
   margin-right: auto;
   color: black;
@@ -125,6 +125,10 @@ body {
   margin-bottom: 50px;
 }
 
+.galleryImages h3 {
+  margin-top: 10px;
+
+}
 .footer {
   margin-left: auto;
   margin-right: auto;
