--- a/style.css
+++ b/style.css
@@ -300,18 +300,15 @@ margin-right: auto;
   }
 
   #footerContainer {
-    background-color: #4d4b4b;
-    border-top: 2px solid #000000;
     margin-top: 80px;
-    position: absolute;
-    width: 100%;
     right: 0;
     bottom: 0;
     left: 0;
+    width: 960px;
   }
   #footer {
     height: 20px;
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: #ffffff;
     text-align: center;
   }
