--- a/store.css
+++ b/store.css
@@ -14,7 +14,7 @@ body {
 /* ----------------------- OUTLINE */
 #nav {
   position: fixed;
-  width: 100%;
+  width: 960px;
   background-color: white;
   /*background-color: rgba(236,240,241, 0.4);*/
   margin-left: auto;
@@ -53,12 +53,12 @@ body {
   padding-top: 50px;
 }
 
-#headerExternal{
+#headerExternal {
   margin-top: 5px;
   border-top: 3px solid black;
 }
 
-#headerContainer{
+#headerContainer {
   height: 580px;
   width: 960px;
   margin-left: auto;
@@ -72,12 +72,12 @@ body {
   padding-top: 50px;
 }
 
-#storeHeaderExternal{
+#storeHeaderExternal {
   margin: 0px;
   border-top: 3px solid black;
 }
 
-#storeHeaderContainer{
+#storeHeaderContainer {
   height: 240px;
   width: 960px;
   margin-left: auto;
@@ -130,18 +130,9 @@ body {
 
 }
 .footer {
-  background-color: #4d4b4b;
-  height: 50px;
-  border-top: 5px solid #000000;
-  font-size: 1rem;
-  color: #ffffff;
-  text-align: center;
-  right: 0;
-  bottom: 0;
-  left: 0;
+
 }
 
 @media screen and (max-width: 982px){
-
 
 }
