--- a/style.css
+++ b/style.css
@@ -275,17 +275,17 @@ margin-right: auto;
   margin-left: auto;
   margin-right: auto;
 }
-
-#footerContainer {
+.footer {
   background-color: #4d4b4b;
-  border-top: 2px solid #000000;
-  margin-top: 80px;
-}
-#footer {
-  height: 20px;
+  height: 50px;
+  border-top: 5px solid #000000;
   font-size: 1rem;
   color: #ffffff;
   text-align: center;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 }
 
 @media screen and (max-width: 982px) {
