--- a/store.css
+++ b/store.css
@@ -14,7 +14,7 @@ body {
 /* ----------------------- OUTLINE */
 #nav {
   position: fixed;
-  width: 960px;
+  width: 100%;
   background-color: white;
   /*background-color: rgba(236,240,241, 0.4);*/
   margin-left: auto;
